Fix sidebar scrollbar

--- a/src/app/scrollbar/scrollbar.component.scss
+++ b/src/app/scrollbar/scrollbar.component.scss
@@ -4,11 +4,11 @@
   position: relative;
   display: block;
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 64px);
 }
 
 ng-scrollbar {
-  --scrollbar-size: .5rem;
+  --scrollbar-size: 0.5rem;
   --scrollbar-border-radius: #{$border-radius};
   --scrollbar-thumb-color: #{$theme-text};
   --scrollbar-thumb-hover-color: #{$theme-secondary};
